--- a/src/pages/docs/background-image.mdx
+++ b/src/pages/docs/background-image.mdx
@@ -38,7 +38,7 @@ By default Tailwind includes background image utilities for creating linear grad
 
 You can add your own background images by editing the `theme.backgroundImage` section of your `tailwind.config.js` file:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
