--- a/src/pages/docs/background-size.mdx
+++ b/src/pages/docs/background-size.mdx
@@ -67,7 +67,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides utilities for `auto`, `cover`, and `contain` background sizes. You can change, add, or remove these by editing the `theme.backgroundSize` section of your config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
