--- a/src/pages/docs/border-opacity.mdx
+++ b/src/pages/docs/border-opacity.mdx
@@ -47,7 +47,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 To customize the opacity values for all opacity-related utilities at once, use the `opacity` section of your `tailwind.config.js` theme configuration:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -64,7 +64,7 @@ To customize the opacity values for all opacity-related utilities at once, use t
 
 If you want to customize only the border opacity utilities, use the `borderOpacity` section:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
