--- a/src/pages/docs/box-shadow.mdx
+++ b/src/pages/docs/box-shadow.mdx
@@ -122,7 +122,7 @@ By default Tailwind provides three drop shadow utilities, one inner shadow utili
 
 If a `default` shadow is provided, it will be used for the non-suffixed `.shadow` utility. Any other keys will be used as suffixes, for example the key `'2'` will create a corresponding `.shadow-2` utility.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
