--- a/src/pages/docs/container.mdx
+++ b/src/pages/docs/container.mdx
@@ -142,7 +142,7 @@ module.exports = {
 
 If you'd like to disable the responsive variants, you can do so using by setting `container` to an empty array in the `variants` section of your `tailwind.config.js` file:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     variants: {
@@ -156,7 +156,7 @@ If you'd like to disable the responsive variants, you can do so using by setting
 
 If you don't plan to use the `container` class in your project, you can disable it entirely by setting the `container` property to `false` in the `corePlugins` section of your config file:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     corePlugins: {
