--- a/src/pages/docs/divide-color.mdx
+++ b/src/pages/docs/divide-color.mdx
@@ -100,7 +100,7 @@ By default Tailwind makes the entire [default color palette](/docs/customizing-c
 
 You can [customize your color palette](/docs/colors#customizing) by editing the `theme.colors` section of your `tailwind.config.js` file, customize just your border and divide colors together using the `theme.borderColor` section, or customize only the divide colors using the `theme.divideColor` section.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
