--- a/src/pages/docs/fill.mdx
+++ b/src/pages/docs/fill.mdx
@@ -27,7 +27,7 @@ Useful for styling icon sets like [Zondicons](http://www.zondicons.com/) that ar
 
 Control which fill utilities Tailwind generates by customizing the `theme.fill` section of your `tailwind.config.js` file:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
