--- a/src/pages/docs/font-family.mdx
+++ b/src/pages/docs/font-family.mdx
@@ -72,7 +72,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides three font family utilities: a cross-browser sans-serif stack, a cross-browser serif stack, and a cross-browser monospaced stack. You can change, add, or remove these by editing the `theme.fontFamily` section of your Tailwind config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
