--- a/src/pages/docs/gap.mdx
+++ b/src/pages/docs/gap.mdx
@@ -83,7 +83,7 @@ By default Tailwind's gap scale matches your configured [spacing scale](/docs/cu
 
 You can customize the global spacing scale in the `theme.spacing` or `theme.extend.spacing` sections of your `tailwind.config.js` file:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -100,7 +100,7 @@ You can customize the global spacing scale in the `theme.spacing` or `theme.exte
 
 To customize the gap scale separately, use the `gap` section of your Tailwind theme config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
