--- a/src/pages/docs/grid-template-columns.mdx
+++ b/src/pages/docs/grid-template-columns.mdx
@@ -53,7 +53,7 @@ By default Tailwind includes grid-template-column utilities for creating basic g
 
 You have direct access to the `grid-template-columns` CSS property here so you can make your custom column values as generic or as complicated and site-specific as you like.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
