--- a/src/pages/docs/grid-template-rows.mdx
+++ b/src/pages/docs/grid-template-rows.mdx
@@ -53,7 +53,7 @@ By default Tailwind includes grid-template-row utilities for creating basic grid
 
 You have direct access to the `grid-template-rows` CSS property here so you can make your custom rows values as generic or as complicated and site-specific as you like.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
