--- a/src/pages/docs/height.mdx
+++ b/src/pages/docs/height.mdx
@@ -94,7 +94,7 @@ By default, Tailwind's height scale is a combination of the [default spacing sca
 
 You can customize the spacing scale for padding, margin, width, and height all at once in the `theme.spacing` section of your `tailwind.config.js` file:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -110,7 +110,7 @@ You can customize the spacing scale for padding, margin, width, and height all a
 
 To customize height separately, use the `theme.height` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
