--- a/src/pages/docs/line-height.mdx
+++ b/src/pages/docs/line-height.mdx
@@ -119,7 +119,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides six relative and eight fixed `line-height` utilities. You change, add, or remove these by customizing the `lineHeight` section of your Tailwind theme config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
