--- a/src/pages/docs/list-style-type.mdx
+++ b/src/pages/docs/list-style-type.mdx
@@ -81,7 +81,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides three utilities for the most common list style types. You change, add, or remove these by editing the `theme.listStyleType` section of your Tailwind config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
