--- a/src/pages/docs/margin.mdx
+++ b/src/pages/docs/margin.mdx
@@ -159,7 +159,7 @@ By default Tailwind provides 20 margin utilities for each side and axis.
 
 If you'd like to customize these values for padding, margin, width, and height all at once, use the `theme.spacing` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -175,7 +175,7 @@ If you'd like to customize these values for padding, margin, width, and height a
 
 To customize only the margin values, use the `theme.margin` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -195,7 +195,7 @@ Learn more about customizing the default theme in the [theme customization docum
 
 If you'd like to add additional negative margin classes (taking the form `-m{side?}-{size}`), prefix the keys in your config file with a dash:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
