--- a/src/pages/docs/max-height.mdx
+++ b/src/pages/docs/max-height.mdx
@@ -56,7 +56,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 Customize Tailwind's default max-height scale in the `theme.maxHeight` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
