--- a/src/pages/docs/max-width.mdx
+++ b/src/pages/docs/max-width.mdx
@@ -65,7 +65,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 Customize Tailwind's default max-width scale in the `theme.maxWidth` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
