--- a/src/pages/docs/min-height.mdx
+++ b/src/pages/docs/min-height.mdx
@@ -58,7 +58,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 Customize Tailwind's default min-height scale in the `theme.minHeight` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
