--- a/src/pages/docs/min-width.mdx
+++ b/src/pages/docs/min-width.mdx
@@ -52,7 +52,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 Customize Tailwind's default min-width scale in the `theme.minWidth` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
