--- a/src/pages/docs/object-position.mdx
+++ b/src/pages/docs/object-position.mdx
@@ -91,7 +91,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides nine object position utilities. You can change, add, or remove these by editing the `theme.objectPosition` section of your Tailwind config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
