--- a/src/pages/docs/space.mdx
+++ b/src/pages/docs/space.mdx
@@ -112,7 +112,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 If you'd like to customize your values for space between, padding, margin, width, and height all at once, use the `theme.spacing` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -128,7 +128,7 @@ If you'd like to customize your values for space between, padding, margin, width
 
 To customize only the space between values, use the `theme.space` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
