--- a/src/pages/docs/stroke-width.mdx
+++ b/src/pages/docs/stroke-width.mdx
@@ -73,7 +73,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 Control which stroke-width utilities Tailwind generates by customizing the `theme.strokeWidth` section in your `tailwind.config.js` file:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
