--- a/src/pages/docs/stroke.mdx
+++ b/src/pages/docs/stroke.mdx
@@ -29,7 +29,7 @@ Useful for styling icon sets like [Feather](https://feathericons.com/) that are 
 
 Control which stroke utilities Tailwind generates by customizing the `theme.stroke` section in your `tailwind.config.js` file:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
