--- a/src/pages/docs/top-right-bottom-left.mdx
+++ b/src/pages/docs/top-right-bottom-left.mdx
@@ -151,7 +151,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind only provides `0` and `auto` top/right/bottom/left/inset utilities. You can change, add, or remove these by editing the `theme.inset` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -168,7 +168,7 @@ By default Tailwind only provides `0` and `auto` top/right/bottom/left/inset uti
 
 If you'd like to add any negative top/right/bottom/left classes that take the same form as Tailwind's [negative margin](/docs/margin#negative-margins) classes, prefix the keys in your config file with a dash:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
