--- a/src/pages/docs/transition-delay.mdx
+++ b/src/pages/docs/transition-delay.mdx
@@ -43,7 +43,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides eight general purpose transition-delay utilities. You change, add, or remove these by customizing the `transitionDelay` section of your Tailwind theme config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
