--- a/src/pages/docs/translate.mdx
+++ b/src/pages/docs/translate.mdx
@@ -53,7 +53,7 @@ By default Tailwind provides fixed value translate utilities that match our [spa
 
 You can customize the global spacing scale in the `theme.spacing` or `theme.extend.spacing` sections of your `tailwind.config.js` file:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -70,7 +70,7 @@ You can customize the global spacing scale in the `theme.spacing` or `theme.exte
 
 To customize the translate scale separately, use the `theme.translate` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
