--- a/src/pages/docs/border-color.mdx
+++ b/src/pages/docs/border-color.mdx
@@ -131,7 +131,7 @@ By default Tailwind makes the entire [default color palette](/docs/customizing-c
 
 You can [customize your color palette](/docs/colors#customizing) by editing the `theme.colors` section of your `tailwind.config.js` file, or customize just your border colors using the `theme.borderColor` section.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
