--- a/src/pages/docs/divide-opacity.mdx
+++ b/src/pages/docs/divide-opacity.mdx
@@ -50,7 +50,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 To customize the opacity values for all opacity-related utilities at once, use the `opacity` section of your `tailwind.config.js` theme configuration:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -67,7 +67,7 @@ To customize the opacity values for all opacity-related utilities at once, use t
 
 If you want to customize only the divide opacity utilities, use the `divideOpacity` section:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
