--- a/src/pages/docs/flex.mdx
+++ b/src/pages/docs/flex.mdx
@@ -198,7 +198,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides four `flex` utilities. You change, add, or remove these by editing the `theme.flex` section of your Tailwind config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
