--- a/src/pages/docs/font-size.mdx
+++ b/src/pages/docs/font-size.mdx
@@ -93,7 +93,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides 10 `font-size` utilities. You change, add, or remove these by editing the `theme.fontSize` section of your Tailwind config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
