--- a/src/pages/docs/order.mdx
+++ b/src/pages/docs/order.mdx
@@ -48,7 +48,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides utilities for `order-first`, `order-last`, `order-none`, and an `order-{number}` utility for the numbers 1 through 12. You change, add, or remove these by editing the `theme.order` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
