--- a/src/pages/docs/padding.mdx
+++ b/src/pages/docs/padding.mdx
@@ -124,7 +124,7 @@ By default Tailwind provides 19 fixed padding utilities for each side and axis.
 
 If you'd like to customize these values for padding, margin, width, and height all at once, use the `theme.spacing` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -140,7 +140,7 @@ If you'd like to customize these values for padding, margin, width, and height a
 
 To customize only the padding values, use the `theme.padding` section of your `tailwind.config.js` file.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
