--- a/src/pages/docs/placeholder-color.mdx
+++ b/src/pages/docs/placeholder-color.mdx
@@ -116,7 +116,7 @@ By default Tailwind makes the entire [default color palette](/docs/customizing-c
 
 You can [customize your color palette](/docs/colors#customizing) by editing `theme.colors` in your `tailwind.config.js` file, or customize just your placeholder colors in the `theme.textColor` section.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
