--- a/src/pages/docs/placeholder-opacity.mdx
+++ b/src/pages/docs/placeholder-opacity.mdx
@@ -58,7 +58,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 To customize the opacity values for all opacity-related utilities at once, use the `opacity` section of your `tailwind.config.js` theme configuration:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -75,7 +75,7 @@ To customize the opacity values for all opacity-related utilities at once, use t
 
 If you want to customize only the placeholder opacity utilities, use the `placeholderOpacity` section:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
