--- a/src/pages/docs/text-opacity.mdx
+++ b/src/pages/docs/text-opacity.mdx
@@ -66,7 +66,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 To customize the opacity values for all opacity-related utilities at once, use the `opacity` section of your `tailwind.config.js` theme configuration:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -83,7 +83,7 @@ To customize the opacity values for all opacity-related utilities at once, use t
 
 If you want to customize only the text opacity utilities, use the `textOpacity` section:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
