--- a/src/pages/docs/transform-origin.mdx
+++ b/src/pages/docs/transform-origin.mdx
@@ -61,7 +61,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides transform-origin utilities for all of the built-in browser keyword options. You change, add, or remove these by customizing the `transformOrigin` section of your Tailwind theme config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
