--- a/src/pages/docs/transition-duration.mdx
+++ b/src/pages/docs/transition-duration.mdx
@@ -43,7 +43,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides eight general purpose transition-duration utilities. You change, add, or remove these by customizing the `transitionDuration` section of your Tailwind theme config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
