--- a/src/pages/docs/z-index.mdx
+++ b/src/pages/docs/z-index.mdx
@@ -54,7 +54,7 @@ For more information about Tailwind's responsive design features, check out the 
 
 By default Tailwind provides six numeric `z-index` utilities and an `auto` utility. You change, add, or remove these by editing the `theme.zIndex` section of your Tailwind config.
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
@@ -79,7 +79,7 @@ By default Tailwind provides six numeric `z-index` utilities and an `auto` utili
 
 If you'd like to add any negative z-index classes that take the same form as Tailwind's [negative margin](/docs/margin#negative-margins) classes, prefix the keys in your config file with a dash:
 
-```diff
+```diff-js
   // tailwind.config.js
   module.exports = {
     theme: {
