Fix find and replace mistake

--- a/src/pages/docs/border-radius.mdx
+++ b/src/pages/docs/border-radius.mdx
@@ -34,7 +34,7 @@ Use utilities like `.rounded-sm`, `.rounded`, or `.rounded-lg` to apply differen
 
 ## Pills and circles
 
- `Use the `rounded-full` utility to create pills and circles.
+Use the `rounded-full` utility to create pills and circles.
 
 ```html
 <template preview class="flex items-center justify-around text-sm p-4">
