--- a/src/pages/docs/border-width.mdx
+++ b/src/pages/docs/border-width.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## All sides
 
- `Use the `border`, `.border-0`, `.border-2`, `.border-4`, or `.border-8` utilities to set the border width for all sides of an element.
+Use the `border`, `.border-0`, `.border-2`, `.border-4`, or `.border-8` utilities to set the border width for all sides of an element.
 
 ```html
 <template preview>
@@ -54,7 +54,7 @@ export const classes = { plugin }
 
 ## Individual sides
 
- `Use the `border-{side}`, `.border-{side}-0`, `.border-{side}-2`, `.border-{side}-4`, or `.border-{side}-8` utilities to set the border width for one side of an element.
+Use the `border-{side}`, `.border-{side}-0`, `.border-{side}-2`, `.border-{side}-4`, or `.border-{side}-8` utilities to set the border width for one side of an element.
 
 ```html
 <template preview>
