--- a/src/pages/docs/box-shadow.mdx
+++ b/src/pages/docs/box-shadow.mdx
@@ -16,7 +16,7 @@ export const classes = { plugin }
 
 ## Outer shadow
 
- `Use the `shadow-xs`, `.shadow-sm`, `.shadow`, `.shadow-md`, `.shadow-lg`, `.shadow-xl`, or `.shadow-2xl` utilities to apply different sized outer box shadows to an element.
+Use the `shadow-xs`, `.shadow-sm`, `.shadow`, `.shadow-md`, `.shadow-lg`, `.shadow-xl`, or `.shadow-2xl` utilities to apply different sized outer box shadows to an element.
 
 ```html
 <template preview class="bg-gray-100 lg:flex justify-around items-center text-sm p-4 py-8">
@@ -61,7 +61,7 @@ export const classes = { plugin }
 
 ## Inner shadow
 
- `Use the `shadow-inner` utility to apply a subtle inset box shadow to an element. This can be useful for things like form controls or wells.
+Use the `shadow-inner` utility to apply a subtle inset box shadow to an element. This can be useful for things like form controls or wells.
 
 ```html
 <template preview class="flex justify-around text-sm p-4 py-8">
@@ -73,7 +73,7 @@ export const classes = { plugin }
 
 ## Focus outline shadow
 
- `Use the `shadow-outline` utility to apply a focus-ring-style shadow to an element. This can be useful when combined with `.focus:outline-none` to create a better looking focus style that follows an element's border radius.
+Use the `shadow-outline` utility to apply a focus-ring-style shadow to an element. This can be useful when combined with `.focus:outline-none` to create a better looking focus style that follows an element's border radius.
 
 ```html
 <template preview class="flex justify-center text-sm p-4 py-8">
