--- a/src/pages/docs/font-smoothing.mdx
+++ b/src/pages/docs/font-smoothing.mdx
@@ -16,7 +16,7 @@ export const classes = { plugin }
 
 ## Subpixel Antialiasing
 
- `Use the `subpixel-antialiased` utility to render text using subpixel antialiasing.
+Use the `subpixel-antialiased` utility to render text using subpixel antialiasing.
 
 ```html
 <template preview>
@@ -28,7 +28,7 @@ export const classes = { plugin }
 
 ## Grayscale Antialiasing
 
- `Use the `antialiased` utility to render text using grayscale antialiasing.
+Use the `antialiased` utility to render text using grayscale antialiasing.
 
 ```html
 <template preview>
