--- a/src/pages/docs/font-style.mdx
+++ b/src/pages/docs/font-style.mdx
@@ -16,7 +16,7 @@ export const classes = { plugin }
 
 ## No Italics
 
- `Use the `not-italic` utility to display text normally. This is typically used to reset italic text at different breakpoints.
+Use the `not-italic` utility to display text normally. This is typically used to reset italic text at different breakpoints.
 
 ```html
 <template preview>
@@ -28,7 +28,7 @@ export const classes = { plugin }
 
 ## Italics
 
- `Use the `italic` utility to make text italic.
+Use the `italic` utility to make text italic.
 
 ```html
 <template preview>
