--- a/src/pages/docs/font-variant-numeric.mdx
+++ b/src/pages/docs/font-variant-numeric.mdx
@@ -38,7 +38,7 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 ### Ordinal
 
- `Use the `ordinal` utility to enable special glyphs for the ordinal markers.
+Use the `ordinal` utility to enable special glyphs for the ordinal markers.
 
 ```html
 <template preview>
@@ -51,7 +51,7 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 ### Slashed Zero
 
- `Use the `slashed-zero` utility to force a 0 with a slash; this is useful when a clear distinction between O and 0 is needed.
+Use the `slashed-zero` utility to force a 0 with a slash; this is useful when a clear distinction between O and 0 is needed.
 
 ```html
 <template preview>
@@ -63,7 +63,7 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 ### Lining figures
 
- `Use the `lining-nums` utility to use the numeric glyphs that are all aligned by their baseline. This corresponds to the `lnum` OpenType feature. This is the default for most fonts.
+Use the `lining-nums` utility to use the numeric glyphs that are all aligned by their baseline. This corresponds to the `lnum` OpenType feature. This is the default for most fonts.
 
 ```html
 <template preview>
@@ -75,7 +75,7 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 ### Oldstyle figures
 
- `Use the `oldstyle-nums` utility to use numeric glyphs where some numbers have descenders. This corresponds to the `onum` OpenType feature.
+Use the `oldstyle-nums` utility to use numeric glyphs where some numbers have descenders. This corresponds to the `onum` OpenType feature.
 
 ```html
 <template preview>
@@ -87,7 +87,7 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 ### Proportional figures
 
- `Use the `proportional-nums` utility to use numeric glyphs that have proportional widths (rather than uniform/tabular). This corresponds to the `pnum` OpenType feature.
+Use the `proportional-nums` utility to use numeric glyphs that have proportional widths (rather than uniform/tabular). This corresponds to the `pnum` OpenType feature.
 
 ```html
 <template preview>
@@ -103,7 +103,7 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 ### Tabular figures
 
- `Use the `tabular-nums` utility to use numeric glyphs that have uniform/tabular widths (rather than proportional). This corresponds to the `tnum` OpenType feature.
+Use the `tabular-nums` utility to use numeric glyphs that have uniform/tabular widths (rather than proportional). This corresponds to the `tnum` OpenType feature.
 
 ```html
 <template preview>
@@ -119,7 +119,7 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 ### Diagonal fractions
 
- `Use the `diagonal-fractions` utility to replace numbers separated by a slash with common diagonal fractions. This corresponds to the `frac` OpenType feature.
+Use the `diagonal-fractions` utility to replace numbers separated by a slash with common diagonal fractions. This corresponds to the `frac` OpenType feature.
 
 ```html
 <template preview>
@@ -131,7 +131,7 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 ### Stacked fractions
 
- `Use the `stacked-fractions` utility to replace numbers separated by a slash with common stacked fractions. This corresponds to the `frac` OpenType feature. Very few fonts seem to support this feature — we've used Ubuntu Mono here.
+Use the `stacked-fractions` utility to replace numbers separated by a slash with common stacked fractions. This corresponds to the `frac` OpenType feature. Very few fonts seem to support this feature — we've used Ubuntu Mono here.
 
 ```html
 <template preview>
@@ -144,7 +144,7 @@ Note that many fonts don't support these features *(stacked fractions support fo
 
 ### Resetting numeric font variants
 
- `Use the `normal-nums` propery to reset numeric font variants. This is usually useful for resetting a font feature at a particular breakpoint:
+Use the `normal-nums` propery to reset numeric font variants. This is usually useful for resetting a font feature at a particular breakpoint:
 
 ```html
 <p class="slashed-zero tabular-nums md:normal-nums ...">12345</p>
