--- a/src/pages/docs/object-position.mdx
+++ b/src/pages/docs/object-position.mdx
@@ -16,7 +16,7 @@ export const classes = { plugin }
 
 ## Usage
 
- `Use the `object-{side}` utilities to specify how a replaced element's content should be positioned within its container.
+Use the `object-{side}` utilities to specify how a replaced element's content should be positioned within its container.
 
 ```html
 <template preview>
