--- a/src/pages/docs/stroke-width.mdx
+++ b/src/pages/docs/stroke-width.mdx
@@ -12,7 +12,7 @@ export const classes = { plugin }
 
 ## Usage
 
- `Use the `stroke-{width}` utilities to set the stroke width of an SVG.
+Use the `stroke-{width}` utilities to set the stroke width of an SVG.
 
 Useful for styling icon sets like [Feather](https://feathericons.com/) that are drawn entirely with strokes.
 
