--- a/src/pages/docs/text-decoration.mdx
+++ b/src/pages/docs/text-decoration.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Underline
 
- `Use the `underline` utility to underline text.
+Use the `underline` utility to underline text.
 
 ```html
 <template preview>
@@ -29,7 +29,7 @@ export const classes = { plugin }
 
 ## Line Through
 
- `Use the `line-through` utility to strike out text.
+Use the `line-through` utility to strike out text.
 
 ```html
 <template preview>
@@ -41,7 +41,7 @@ export const classes = { plugin }
 
 ## No Underline
 
- `Use the `no-underline` utility to remove underline or line-through styling.
+Use the `no-underline` utility to remove underline or line-through styling.
 
 ```html
 <template preview>
