--- a/src/pages/docs/display.mdx
+++ b/src/pages/docs/display.mdx
@@ -167,7 +167,7 @@ Use `contents` to create a "phantom" container whose children act like direct ch
 
 ## Table
 
- `Use the `table`, `.table-row`, `.table-cell`, `.table-caption`, `.table-column`, `.table-column-group`, `.table-header-group`, `table-row-group`, and `.table-footer-group` utilities to create elements that behave like their respective table elements.
+Use the `table`, `.table-row`, `.table-cell`, `.table-caption`, `.table-column`, `.table-column-group`, `.table-header-group`, `table-row-group`, and `.table-footer-group` utilities to create elements that behave like their respective table elements.
 
 ```html
 <template preview>
